added code to upload file

--- a/git_demo.ipynb
+++ b/git_demo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPmnzKONfr+gqeTxOtAgP27"
+      "authorship_tag": "ABX9TyOzTmtac6BQnf9jkk+nuNwO"
     },
     "kernelspec": {
       "name": "python3",
@@ -31,7 +31,10 @@
         "id": "i5BUT_2Lqpiy"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import pandas as pd\n",
+        "df = pd.read_csv()"
+      ]
     }
   ]
 }
